# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [2.2.1] - 2022-12-13
### Fixed
- [GUNICORN] [CONF] Timeout increased to 60 seconds
- [APACHE] [GUNICORN] Set 4 workers w/ 4 threads
- [API_PARSER][DEFENDER] GUI 'test' button where always returning "Success" even if credentials where wrong
### Changed
- [PORTAL] [GUNICORN] Set 4 workers w/ 4 threads
- [NGINX] [CONF] Proxy timeout increased to 5 seconds


## [2.2.0] - 2022-12-09
### Fixed
- [API_PARSER] [CROWDSTRIKE] last_api_call was not properly updated
- [SYSTEM] [CERTIFICATES] Ensure correct rights and ownerships to imported node's certificate files
- [CLUSTER] [CLUSTER_JOIN] Numerous improvements to cluster_join script, for both new node and called master
- [SYSTEM] [NET2MONGO] Allow to get network configuration from /etc/rc.conf AND /etc/rc.conf.d/network, and accept more ifconfig formats
### Added
- [OAUTH] Add 'Access-Control-Allow-Origin' header to oauth2 endpoints for API requests through SPAs
- [GUI] [SYSTEM] Add nginx in the apache jail to work as proxy and serve static files for gunicorn
- [API_PARSER] [PROOFPOINT_CASB] New api parser Proofpoint CASB
### Changed
- [GUI] [SYSTEM] Replace apache's WSGI with gunicorn to serve GUI
- [PORTAL] [SYSTEM] Run portal as non-root
### Removed
- [APACHE] Completely remove apache package and logic in code (service, handling, etc...)


## [2.1.4] - 2022-11-18
### Fixed
- [IDP] [API] Don't fail on token updates with explicit expire_at
- [API_PARSER] [IMPERVA] Use requests' auth object instead of manually created Authorization header
- [API_PARSER] [IMPERVA] Typo in logger made the process crash
- [API_PARSER] [SYMANTEC] Correctly extracting token from downloaded archive 
- [SSO_FORWARD] Missing variable in logger