@@ -38,6 +38,8 @@ from system.pki.models import TLSProfile, X509Certificate
 from system.users.models import User
 from toolkit.mongodb.mongo_base import MongoBase
 from toolkit.redis.redis_base import RedisBase
+from services.frontend.models import Frontend
+from applications.backend.models import Backend
 
 # Required exceptions imports
 from django.core.exceptions import ObjectDoesNotExist
@@ -65,12 +67,15 @@ class DeleteView(View):
         except ObjectDoesNotExist:
             return HttpResponseForbidden('Injection detected.')
 
+        used_by = self.used_by(obj_inst)
+
         return render(request, self.template_name, {
             'object_id': object_id,
             'menu_name': self.menu_name,
             'delete_url': self.delete_url,
             'redirect_url': self.redirect_url,
-            'obj_inst': obj_inst
+            'obj_inst': obj_inst,
+            'used_by': used_by
         })
 
     def post(self, request, object_id, **kwargs):
@@ -83,12 +88,24 @@ class DeleteView(View):
             obj_inst.delete()
         return HttpResponseRedirect(self.redirect_url)
 
+    def used_by(self, object):
+        """ Retrieve all objects that use the current view
+        Return an empty list, printed in template as "Used by this object:"
+        """
+        return []
+
 
 class DeleteTLSProfile(DeleteView):
     menu_name = _("System -> TLS Profile -> Delete")
     obj = TLSProfile
     redirect_url = "/system/tls_profile/"
     delete_url = "/system/tls_profile/delete/"
+    
+    def used_by(self, object):
+        """ Retrieve all listerners and servers that use the current TLSProfile
+        Return a set of strings, printed in template as "Used by this object:"
+        """
+        return set(listener.frontend for listener in object.listener_set.all()).union(set(server.backend for server in object.server_set.all()))
 
     # get and post methods herited from mother class
 
